--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": ""
+		"url": "https://github.com/NekoShatoo/NightcordVSCodeTheme.git"
 	},
-	"homepage": "",
+	"homepage": "https://github.com/NekoShatoo/NightcordVSCodeTheme/blob/main/README.md",
 	"engines": {
 		"vscode": "^1.0.0"
 	},
